@@ -92,6 +92,10 @@ Bug fixed in 1.8.0c:
   - Fix AM_PATH_LISPDIR to avoid \? in sed regular expressions; it
     doesn't conform to POSIX.
 
+* Anticipation:
+
+  - Check for python2.4 in AM_PATH_PYTHON.
+
 * Spurious failures in test suite:
 
   - tests/libtool5.test, tests/ltcond.test, tests/ltcond2.test,
@@ -99,7 +103,6 @@ Bug fixed in 1.8.0c:
   - tests/aclocal6.test: fix failure if autom4te.cache is disabled.
   - tests/txinfo24.test, tests/txinfo25.test, tests/txinfo28.test:
     fix failures with old Texinfo versions.
-
 
 New in 1.8:
 
