@@ -1,3 +1,7 @@
+2004-01-11  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.4.
+
 2004-01-10  Peter Eisentraut  <peter_e@gmx.net>  (tiny change)
 
 	* m4/as.m4 (AM_PROG_AS): Format and align help string more
